luciddb/test/sql/udr/udx/splitStringsTest.ref
0: jdbc:luciddb:> -- test SplitStringUdx
0: jdbc:luciddb:> create schema SPLITTEST;
0: jdbc:luciddb:> set schema 'SPLITTEST';
0: jdbc:luciddb:> create table "T1" (COL1 integer, COL2 varchar(255), COL3 varchar(255));
0: jdbc:luciddb:> insert into T1 (COL1, COL2, COL3) values (10, 'AA~BB~ ', 'b!ah');
0: jdbc:luciddb:> insert into T1 (COL1, COL2, COL3) values (20, '~', 'bl~~h');
0: jdbc:luciddb:> insert into T1 (COL1, COL2, COL3) values (30, '\~', 'bl~~h');
0: jdbc:luciddb:> insert into T1 (COL1, COL2, COL3) values (40, 'CC~\~\~~\~DD', '~meh');
0: jdbc:luciddb:> insert into T1 (COL1, COL2, COL3) values (50, 'EE ~ F\~F\F', '~heh');
0: jdbc:luciddb:> 
0: jdbc:luciddb:> -- don't strip whitespace
0: jdbc:luciddb:> select * from table(
. . . . . . . . >   applib.split_rows(
. . . . . . . . >     cursor(select COL2 from T1),
. . . . . . . . >     '~',
. . . . . . . . >     '\',
. . . . . . . . >     FALSE)
. . . . . . . . > );
+---------+
|  COL2   |
+---------+
| AA      |
| BB      |
|         |
|         |
| ~       |
| CC      |
| ~~      |
| ~DD     |
| EE      |
|  F~F\F  |
+---------+
0: jdbc:luciddb:> 
0: jdbc:luciddb:> -- strip whitespace
0: jdbc:luciddb:> select * from table(
. . . . . . . . >   applib.split_rows(
. . . . . . . . >     cursor(select COL2 from T1),
. . . . . . . . >     '~',
. . . . . . . . >     '\',
. . . . . . . . >     TRUE)
. . . . . . . . > );
+--------+
|  COL2  |
+--------+
| AA     |
| BB     |
|        |
| ~      |
| CC     |
| ~~     |
| ~DD    |
| EE     |
| F~F\F  |
+--------+
0: jdbc:luciddb:> 
0: jdbc:luciddb:> create or replace view V1 as (select * from table(
. . . . . . . . >   applib.split_rows(
. . . . . . . . >     cursor(select * from T1),
. . . . . . . . >     row(COL2),
. . . . . . . . >     '~',
. . . . . . . . >     '\',
. . . . . . . . >     FALSE)
. . . . . . . . > ));
0: jdbc:luciddb:> 
0: jdbc:luciddb:> -- should have two rows with trailing space
0: jdbc:luciddb:> select * from V1 where COL2 like '% ';
+-------+-------+-------+
| COL1  | COL2  | COL3  |
+-------+-------+-------+
| 10    |       | b!ah  |
| 50    | EE    | ~heh  |
+-------+-------+-------+
0: jdbc:luciddb:> 
0: jdbc:luciddb:> -- should have two rows with leading space
0: jdbc:luciddb:> select * from V1 where COL2 like ' %';
+-------+---------+-------+
| COL1  |  COL2   | COL3  |
+-------+---------+-------+
| 10    |         | b!ah  |
| 50    |  F~F\F  | ~heh  |
+-------+---------+-------+
0: jdbc:luciddb:> 
0: jdbc:luciddb:> -- following three should give the same output
0: jdbc:luciddb:> select * from table(
. . . . . . . . >   applib.split_string_to_rows(
. . . . . . . . >     'AA~BB~CC',
. . . . . . . . >     '~',
. . . . . . . . >     '\',
. . . . . . . . >     TRUE)
. . . . . . . . > );
+--------------+
| OUT_STRINGS  |
+--------------+
| AA           |
| BB           |
| CC           |
+--------------+
0: jdbc:luciddb:> 
0: jdbc:luciddb:> select * from table(
. . . . . . . . >   applib.split_string_to_rows(
. . . . . . . . >     'AA~BB~CC~ ~~ ',
. . . . . . . . >     '~',
. . . . . . . . >     '\',
. . . . . . . . >     TRUE)
. . . . . . . . > );
+--------------+
| OUT_STRINGS  |
+--------------+
| AA           |
| BB           |
| CC           |
+--------------+
0: jdbc:luciddb:> 
0: jdbc:luciddb:> select * from table(
. . . . . . . . >   applib.split_string_to_rows(
. . . . . . . . >     '~~  ~ AA~BB~CC',
. . . . . . . . >     '~',
. . . . . . . . >     '\',
. . . . . . . . >     TRUE)
. . . . . . . . > );
+--------------+
| OUT_STRINGS  |
+--------------+
| AA           |
| BB           |
| CC           |
+--------------+
0: jdbc:luciddb:> 
0: jdbc:luciddb:> -- test with whitespace-only string input
0: jdbc:luciddb:> select * from table(
. . . . . . . . >   applib.split_string_to_rows(
. . . . . . . . >     '  ',
. . . . . . . . >     '~',
. . . . . . . . >     '\',
. . . . . . . . >     TRUE)
. . . . . . . . > );
+--------------+
| OUT_STRINGS  |
+--------------+
+--------------+
0: jdbc:luciddb:> 
0: jdbc:luciddb:> select * from table(
. . . . . . . . >   applib.split_string_to_rows(
. . . . . . . . >     '  ',
. . . . . . . . >     '~',
. . . . . . . . >     '\',
. . . . . . . . >     FALSE)
. . . . . . . . > );
+--------------+
| OUT_STRINGS  |
+--------------+
|              |
+--------------+
0: jdbc:luciddb:> 
0: jdbc:luciddb:> -- test with empty input
0: jdbc:luciddb:> select * from table(
. . . . . . . . >   applib.split_string_to_rows(
. . . . . . . . >     '',
. . . . . . . . >     '~',
. . . . . . . . >     '\',
. . . . . . . . >     FALSE)
. . . . . . . . > );
+--------------+
| OUT_STRINGS  |
+--------------+
+--------------+
0: jdbc:luciddb:> 
0: jdbc:luciddb:> select * from table(
. . . . . . . . >   applib.split_string_to_rows(
. . . . . . . . >     '',
. . . . . . . . >     '~',
. . . . . . . . >     '\',
. . . . . . . . >     TRUE)
. . . . . . . . > );
+--------------+
| OUT_STRINGS  |
+--------------+
+--------------+
0: jdbc:luciddb:> 
0: jdbc:luciddb:> create table emptyTable(c1 varchar(10));
0: jdbc:luciddb:> select * from table(
. . . . . . . . >   applib.split_rows(cursor(select c1 from emptyTable),'~','!',TRUE));
+-----+
| C1  |
+-----+
+-----+
0: jdbc:luciddb:> 
0: jdbc:luciddb:> -- test with null input
0: jdbc:luciddb:> call applib.create_var('splittest', null, 'xyz');
0: jdbc:luciddb:> call applib.set_var('splittest', 'var', null);
0: jdbc:luciddb:> select * from table(applib.split_string_to_rows(applib.get_var('splittest', 'var'), ',', '!',TRUE));
+--------------+
| OUT_STRINGS  |
+--------------+
+--------------+
0: jdbc:luciddb:> -- test with null input to split_rows
0: jdbc:luciddb:> create table status (c1 varchar(10));
0: jdbc:luciddb:> insert into status values (null);
0: jdbc:luciddb:> select * from status;
+-----+
| C1  |
+-----+
|     |
+-----+
0: jdbc:luciddb:> select * from table(
. . . . . . . . >   applib.split_rows(cursor(select c1 from status),'~','!',TRUE));
+-----+
| C1  |
+-----+
|     |
+-----+
0: jdbc:luciddb:> select count(*) from table(
. . . . . . . . >   applib.split_rows(cursor(select c1 from status),'~','!',TRUE)) where c1 is null;
+---------+
| EXPR$0  |
+---------+
| 1       |
+---------+
0: jdbc:luciddb:> 
0: jdbc:luciddb:> create table status1 (c1 varchar(10), c2 varchar(10));
0: jdbc:luciddb:> insert into status1 values (null,null);
0: jdbc:luciddb:> select * from table(
. . . . . . . . >   applib.split_rows(cursor(select c1,c2 from status1),row(c1),'~','!',TRUE));
+-----+-----+
| C1  | C2  |
+-----+-----+
|     |     |
+-----+-----+
0: jdbc:luciddb:> select count(*) from table(
. . . . . . . . >   applib.split_rows(cursor(select c1,c2 from status1),row(c1),'~','!',TRUE)) where c1 is null;
+---------+
| EXPR$0  |
+---------+
| 1       |
+---------+
0: jdbc:luciddb:> 
0: jdbc:luciddb:> -- test exception when more than one escape char
0: jdbc:luciddb:> -- enable when LER-4686 is fixed
0: jdbc:luciddb:> --select * from table(
0: jdbc:luciddb:> --  applib.split_string_to_rows(
0: jdbc:luciddb:> --    '~~  ~ AA~BB~CC',
0: jdbc:luciddb:> --    '~',
0: jdbc:luciddb:> --    '\a',
0: jdbc:luciddb:> --    TRUE)
0: jdbc:luciddb:> --);
0: jdbc:luciddb:> 
0: jdbc:luciddb:> -- test exception when more than one separator char
0: jdbc:luciddb:> -- enable when LER-4686 is fixed
0: jdbc:luciddb:> --select * from table(
0: jdbc:luciddb:> --  applib.split_string_to_rows(
0: jdbc:luciddb:> --    '~~  ~ AA~BB~CC',
0: jdbc:luciddb:> --    '~a',
0: jdbc:luciddb:> --    '\',
0: jdbc:luciddb:> --    TRUE)
0: jdbc:luciddb:> --);
0: jdbc:luciddb:> 
0: jdbc:luciddb:> -- test exception when more than one col to split in multicol mode
0: jdbc:luciddb:> select * from table(
. . . . . . . . >   applib.split_rows(
. . . . . . . . >     cursor(select * from T1),
. . . . . . . . >     row(COL2,COL3),
. . . . . . . . >     '~',
. . . . . . . . >     '\',
. . . . . . . . >     FALSE)
. . . . . . . . > );
Error: Can only split a single column at a time. (state=,code=0)
0: jdbc:luciddb:> 
0: jdbc:luciddb:> -- test exception when more than one col as input in singlecol mode
0: jdbc:luciddb:> select * from table(
. . . . . . . . >   applib.split_rows(
. . . . . . . . >     cursor(select * from T1),
. . . . . . . . >     '~',
. . . . . . . . >     '\',
. . . . . . . . >     FALSE)
. . . . . . . . > );
Error: Input cursor must be one single column. (state=,code=0)
0: jdbc:luciddb:> 
0: jdbc:luciddb:> drop schema SPLITTEST cascade;
0: jdbc:luciddb:> 
0: jdbc:luciddb:> !quit
